[package]
name = "govuk-notify-cli"
description = "A CLI for developers on GOV.UK Notify"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "notify"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.2.7", features = ["derive", "env"] }
clap_complete = "4.2.1"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
